------------
v3.0.0alpha4
------------




------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------


------
v2.0.3
------

[jan] Mark PHP 7 as supported.


------
v2.0.2
------

[jan] Add Composer definition.


------
v2.0.1
------

[mms] Use new Horde_Test layout.


------
v2.0.0
------

First stable release for Horde 5.


-----------
v2.0.0beta1
-----------

First beta release for Horde 5.


------------
v2.0.0alpha1
------------

First alpha release for Horde 5.


------
v1.0.1
------

[mms] Need to cache gettext-enabled templates with language information in the
      cache ID (Bug #10872).


------
v1.0.0
------

First stable release for Horde 4.


---------
v1.0.0RC2
---------

Second release candidate for Horde 4.


---------
v1.0.0RC1
---------

First release candidate for Horde 4.


-----------
v1.0.0beta1
-----------

First beta release for Horde 4.


------------
v1.0.0alpha1
------------

First alpha release for Horde 4.
Remove dependency on Horde_Core.


------
v0.0.2
------

Converted to package.xml 2.0 for pear.horde.org
Remove numeric array key constraint (Request #4413).


------
v0.0.1
------

Initial release as a PEAR package